Create the fake ntp background view invisible

This CL changes the creation of the view used to simulate the background
of the NTP during stack view animation so it is unvisible at the
creation.

Bug: 819795
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ia59dea3ff4902b21ad1fa097d0bb3c7210d41b93
Reviewed-on: https://chromium-review.googlesource.com/956071
Reviewed-by: Jérôme Lebel <jlebel@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542127}
Former-commit-id: c06388a91a8048204e0808f60fc804003b2c4ba2